modifiy generate class name